--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.26.0",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
-    "prettier": "^2.2.1",
+    "prettier": "2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
