--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@types/prettier": "^2.4.4",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.24",
     "@types/react-resizable": "^1.7.4",
     "@uiw/react-md-editor": "^3.12.1",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
     "prettier": "2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
