--- a/package.json
+++ b/package.json
@@ -1,58 +1,10 @@
 {
-  "name": "docco",
-  "version": "0.1.0",
+  "name": "root",
   "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
-    "@monaco-editor/react": "^4.3.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.24",
-    "@types/prettier": "^2.4.4",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.24",
-    "@types/react-resizable": "^1.7.4",
-    "@uiw/react-md-editor": "^3.12.1",
-    "axios": "^0.26.1",
-    "bulmaswatch": "^0.8.1",
-    "esbuild-wasm": "0.8.27",
-    "immer": "^9.0.12",
-    "localforage": "^1.10.0",
-    "prettier": "2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^8.0.1",
-    "react-resizable": "^3.0.4",
-    "react-scripts": "5.0.0",
-    "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+  "devDependencies": {
+    "lerna": "^3.22.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "lerna run start --parallel"
   }
 }
